--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "advent_of_code_2018"
 version = "0.1.0"
 authors = ["Brad <brad.crouch9330@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 linked-list = "0.0.3"
